Update Java to 21 & Add JUnit & Add compiler plugins